--- a/index.html
+++ b/index.html
@@ -3,119 +3,150 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Smoothies!</title>
-  <meta name="description" content="Awesome Smoothie Recipes">
-  <meta name="author" content="Mike Hopper">
-  <link rel="stylesheet" type="text/css" href="app.css">
+  <title>SmoothieSite | Smoothie Recipes</title>
+  <meta name="description" content="The Best Smoothie Recipes">
+  <meta name="author" content="Kenneth Lin">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!--links begin-->
+
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
+  <link rel="stylesheet" type="text/css" href="css/app.css">
+
+  <!-- links end -->
+
 </head>
 
 <body>
 
-  <section>
-    <h1>Welcome to Smoothie Recipes</h1>
-    <p>Welcome to my collection of delicious and healthy smoothie recipes. Enjoy!!!</p>
+  <nav>
+    <ul class="nav nav-pills">
+      <li role="presentation" class="active"><a href="#" tooltip="Home"><span class="glyphicon glyphicon-leaf"></span></a></li>
+      <li role="presentation"><a href="#">About</a></li>
+      <li role="presentation"><a href="#">Recipes</a></li>
+      <li role="presentation"><a href="#">Legal</a></li>
+    </ul>
+  </nav>
+
+<br>
+
+  <section class="jumbotron">
+    <h1>Welcome to SmoothieSite</h1>
+    <p>A site for delicious and healthy smoothies!</p>
   </section>
 
-  <section class="recipes">
-    <article class="recipe">
+  <section class="recipes row container-fluid">
+    <article class="recipe col-md-4 col-sm-6 col-xs-12 data-toggle='modal' data-target='#myModal'" id="classic">
       <h2>Classic</h2>
       <ul>
-        <li>2 small bananas, broken into chunks</li>
-        <li>1 cup frozen unsweetened strawberries</li>
-        <li>1 (8 ounce) container vanilla low-fat yogurt</li>
-        <li>3/4 cup milk</li>
+        <li>2 bananas, broken into chunks</li>
+        <li>1 frozen strawberry</li>
+        <li>5 gal (640 oz) goat cheese</li>
+        <li>3/7 cup milk</li>
       </ul>
     </article>
 
-    <article class="recipe">
+    <article class="recipe col-md-4 col-sm-6 col-xs-12" id="purple">
       <h2>Purple Monster</h2>
       <ul>
-        <li>2 frozen bananas</li>
-        <li>1/2 cup frozen blueberries</li>
-        <li>1 cup orange juice</li>
-        <li>1 tablespoon honey (optional)</li>
-        <li>1 teaspoon vanilla extract (optional)</li>
+        <li>2 bananas, broken into chunks</li>
+        <li>1/3 cup frozen water</li>
+        <li>1 dvd "Barney's Great Adventures"</li>
+        <li>1 cup paprika (optional)</li>
+        <li>3 boiled eggs, whole</li>
       </ul>
     </article>
 
-    <article class="recipe">
-      <h2>Peanut Butter Banana</h2>
+    <article class="recipe col-md-4 col-sm-6 col-xs-12" id="pbb">
+      <h2>P.B. & B.</h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
-        <li>2 cups milk</li>
-        <li>1/2 cup peanut butter</li>
-        <li>2 tablespoons honey, or to taste</li>
-        <li>2 cups ice cubes</li>
+        <li>2 cups heavy cream</li>
+        <li>12 cups peanut butter</li>
+        <li>8 tablespoons chili powder, or to taste</li>
+        <li>2 cups lime juice</li>
       </ul>
     </article>
 
-    <article class="recipe">
-      <h2>Banana-Berry</h2>
+    <article class="recipe col-md-4 col-sm-6 col-xs-12" id="minion">
+      <h2>The Minion</h2>
       <ul>
-        <li>1 small banana</li>
-        <li>6 oz. pineapple juice</li>
-        <li>0.50 cup ice</li>
-        <li>6 oz. blueberries</li>
-        <li>6 oz. raspberries or blackberries</li>
-        <li>2 tsp. honey</li>
-        <li>1 tsp. grated peeled fresh ginger</li>
+        <li>2 bananas, broken into chunks</li>
+        <li>3 bananas, cut into cubes</li>
+        <li>1 banana, thinly sliced</li>
+        <li>1 banana, mushed into mush</li>
+        <li>2 bananas, grated</li>
+        <li>3 bananas, pre-digested</li>
+        <li>2 frozen bananas</li>
       </ul>
     </article>
 
-    <article class="recipe">
-      <h2>Irresistible Peach</h2>
+    <article class="recipe col-md-4 col-sm-6 col-xs-12" id="peach">
+      <h2>Son of a Peach</h2>
       <ul>
-        <li>2 cup peaches</li>
-        <li>0.50 cup milk</li>
-        <li>1 cup Ice cream</li>
-        <li>1 tbsp. lemon juice</li>
-        <li>peach slices</li>
+        <li>2 bananas, broken into chunks</li>
+        <li>8 baskets peaches</li>
+        <li>3/7 cup milk</li>
+        <li>1 lemon</li>
+        <li>1 clove garlic, crushed</li>
+        <li>3 cups coffee grinds</li>
       </ul>
     </article>
 
-    <article class="recipe">
-      <h2>Kiwi Strawberry</h2>
+    <article class="recipe col-md-4 col-sm-6 col-xs-12" id="kiwi">
+      <h2>Kiwi Go Home You're Drunk</h2>
       <ul>
-        <li>1 banana</li>
-        <li>6 strawberries</li>
+        <li>2 bananas, broken into chunks</li>
         <li>1 kiwi</li>
-        <li>1/2 cup vanilla frozen yogurt</li>
-        <li>3/4 cup pineapple and orange juice blend</li>
+        <li>1 gal vodka, triple distilled</li>
+        <li>1 Taco Bell "chalupa"</li>
+        <li>4 more kiwis</li>
       </ul>
     </article>
 
-    <article class="recipe">
-      <h2>Chocolate Banana</h2>
+    <article class="recipe col-md-4 col-sm-6 col-xs-12" id="drinkthis">
+      <h2>Don't Drink This</h2>
       <ul>
-        <li>1 banana</li
-        <li>1 tablespoon cocolate syrup</li>
-        <li>1 cup milk</li
-        <li>1 cup crushed ice</li>
+        <li>2 bananas, broken into chunks</li>
+        <li>1 can baked beans</li>
+        <li>3 cups skim milk</li>
+        <li>1 cup vinegar</li>
       </ul>
     </article>
 
-    <article class="recipe">
-      <h2>Feel Good</h2>
+    <article class="recipe col-md-4 col-sm-6 col-xs-12" id="gainz">
+      <h2>Gainz</h2>
       <ul>
-        <li>1/2 cup nonfat milk</li>
-        <li>1/2 cup fat-free plain yogurt</li>
-        <li>1/2 frozen banana, peeled and chopped</li>
-        <li>2 tablespoons powdered protein supplement</li>
+        <li>2 bananas, broken into chunks</li>
+        <li>7 cups greek yogurt</li>
+        <li>1/2 frozen steak, ribeye</li>
+        <li>5 cups powdered protein supplement</li>
         <li>1 1/2 tablespoons flax seed</li>
-        <li>1 teaspoon honey</li>
-        <li>1/2 cup frozen strawberries</li>
+        <li>3 eggs, raw</li>
+        <li>1 cup activated cashews</li>
       </ul>
     </article>
 
-    <article class="recipe">
-      <h2>Mango Lassi II</h2>
+    <article class="recipe col-md-4 col-sm-6 col-xs-12" id="mango">
+      <h2>Mango Lassi III</h2>
       <ul>
-        <li>2 mangos - peeled, seeded and diced</li>
-        <li>2 cups plain yogurt</li>
-        <li>1/2 cup white sugar</li>
-        <li>1 cup ice</li>
+        <li>2 bananas, broken into chunks</li>
+        <li>2 mangoes, whole</li>
+        <li>4 cups brown sugar</li>
+        <li>1 cube of ice</li>
       </ul>
     </article>
   </section>
+
+<footer>Disclaimer: SmoothieSite.com and its affiliates are not responsible for any internal hemorrhaging, stomach ulcers, or rectal prolapse that may occur when consuming these recipes.</footer>
+
+<!--JS Bootstrap//jQuery scripts-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="js/bootstrap.min.js"></script>
+
 </body>
 </html>
