--- a/index.html
+++ b/index.html
@@ -21,26 +21,23 @@
 </head>
 
 <body>
-
   <nav>
     <ul class="nav nav-pills">
       <li role="presentation" class="active"><a href="#" tooltip="Home"><span class="glyphicon glyphicon-leaf"></span></a></li>
       <li role="presentation"><a href="#">About</a></li>
       <li role="presentation"><a href="#">Recipes</a></li>
-      <li role="presentation"><a href="#">Legal</a></li>
+      <li role="presentation"><a href="#">Search</a></li>
     </ul>
   </nav>
 
-<br>
-
   <section class="jumbotron">
-    <h1>Welcome to SmoothieSite</h1>
+    <h1>SmoothieSite</h1>
     <p>A site for delicious and healthy smoothies!</p>
   </section>
 
   <section class="recipes row container-fluid">
     <article class="recipe col-md-4 col-sm-6 col-xs-12 data-toggle='modal' data-target='#myModal'" id="classic">
-      <h2>Classic</h2>
+      <h2>Classic<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
         <li>1 frozen strawberry</li>
@@ -50,7 +47,7 @@
     </article>
 
     <article class="recipe col-md-4 col-sm-6 col-xs-12" id="purple">
-      <h2>Purple Monster</h2>
+      <h2>Purple Monster<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
         <li>1/3 cup frozen water</li>
@@ -61,7 +58,7 @@
     </article>
 
     <article class="recipe col-md-4 col-sm-6 col-xs-12" id="pbb">
-      <h2>P.B. & B.</h2>
+      <h2>P.B. & B.<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
         <li>2 cups heavy cream</li>
@@ -72,7 +69,7 @@
     </article>
 
     <article class="recipe col-md-4 col-sm-6 col-xs-12" id="minion">
-      <h2>The Minion</h2>
+      <h2>The Minion<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
         <li>3 bananas, cut into cubes</li>
@@ -85,7 +82,7 @@
     </article>
 
     <article class="recipe col-md-4 col-sm-6 col-xs-12" id="peach">
-      <h2>Son of a Peach</h2>
+      <h2>Son of a Peach<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
         <li>8 baskets peaches</li>
@@ -97,7 +94,7 @@
     </article>
 
     <article class="recipe col-md-4 col-sm-6 col-xs-12" id="kiwi">
-      <h2>Kiwi Go Home You're Drunk</h2>
+      <h2>Kiwi pls<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
         <li>1 kiwi</li>
@@ -108,7 +105,7 @@
     </article>
 
     <article class="recipe col-md-4 col-sm-6 col-xs-12" id="drinkthis">
-      <h2>Don't Drink This</h2>
+      <h2>Don't Drink This<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
         <li>1 can baked beans</li>
@@ -118,7 +115,7 @@
     </article>
 
     <article class="recipe col-md-4 col-sm-6 col-xs-12" id="gainz">
-      <h2>Gainz</h2>
+      <h2>Gainz<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
         <li>7 cups greek yogurt</li>
@@ -131,7 +128,7 @@
     </article>
 
     <article class="recipe col-md-4 col-sm-6 col-xs-12" id="mango">
-      <h2>Mango Lassi III</h2>
+      <h2 >Mango Lassi III<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
         <li>2 mangoes, whole</li>
@@ -141,7 +138,7 @@
     </article>
   </section>
 
-<footer>Disclaimer: SmoothieSite.com and its affiliates are not responsible for any internal hemorrhaging, stomach ulcers, or rectal prolapse that may occur when consuming these recipes.</footer>
+<footer>SmoothieSite.com and its affiliates are not responsible for any internal bleeding, ulcers, or prolapse that may or may not occur after consuming these recipes.</footer>
 
 <!--JS Bootstrap//jQuery scripts-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
