--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SmoothieSite | Smoothie Recipes</title>
-  <meta name="description" content="The Best Smoothie Recipes">
+  <title>ResponsiveBanana | Smoothie Recipes</title>
+  <meta name="description" content="The Best Smoothie Recipes.">
   <meta name="author" content="Kenneth Lin">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,7 +31,7 @@
   </nav>
 
   <section class="jumbotron">
-    <h1>SmoothieSite</h1>
+    <h1>Responsive Banana</h1>
     <p>A site for delicious and healthy smoothies!</p>
   </section>
 
@@ -120,7 +120,7 @@
         <li>2 bananas, broken into chunks</li>
         <li>7 cups greek yogurt</li>
         <li>1/2 frozen steak, ribeye</li>
-        <li>5 cups powdered protein supplement</li>
+        <li>5 cups powdered protein supplement</li> 
         <li>3 eggs, raw</li>
         <li>1 cup activated cashews</li>
       </ul>
