cleaned up 2 lines of code, added notes.md

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </section>
 
   <section class="recipes row container-fluid">
-    <article class="recipe col-md-4 col-sm-6 col-xs-12 data-toggle='modal' data-target='#myModal'" id="classic">
+    <article class="recipe col-md-4 col-sm-6 col-xs-12" id="classic">
       <h2>Classic<a href="#"><span class="glyphicon glyphicon-heart-empty"></span></a></h2>
       <ul>
         <li>2 bananas, broken into chunks</li>
